fix import button on smaller screen view

--- a/frontend-yo/app/styles/main.css
+++ b/frontend-yo/app/styles/main.css
@@ -187,3 +187,7 @@ tr.ng-scope {
 tr.ng-scope:hover {
   background: rgb(205, 216, 236);
 }
+
+.main-buttons {
+  margin-bottom: 50px;
+}
